--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ DB_USER='jeru'
 DB_PASSWORD='jeru1234'
 DB_HOST='127.0.0.1'
 MODE='dev' 
-ALLOWED_HOSTS='.localhost','.herokuapp.com','.127.0.0.1'
+ALLOWED_HOSTS='.127.0.0.1','.localhost','.herokuapp.com'
 DISABLE_COLLECTSTATIC=1
 
 
