--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.5.2
 dj-database-url==0.5.0
 Django==4.0.5
+django-crispy-forms==1.14.0
 django-heroku==0.3.1
+django-widget-tweaks==1.4.12
 gunicorn==20.1.0
 psycopg2==2.9.3
 python-decouple==3.6
